# agent-flows

./: .env.example  .gitignore  OPENROUTER_MIGRATION.md  README.md  config.py  jira_task.md  pyproject.toml  requirements.txt
clients/: README.md  __init__.py  llm_client.py  lmstudio_client.py  openrouter_client.py
docs/: claude_code_tools_overview.md  planning_org_enhancement.md  pr_review_ochsec_agent-flows_#6_20250713_154225_openrouter.md
global-installation/: README.md  configure  jira_task  research  review  setup.sh
mcp/web_ops/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  server.py
modes/: architect.md  ask.md  code.md  debug.md  devops.md  expert_consultant.md  expert_consultant.yaml  fact_checker.md  fact_checker.yaml  orchestrator.md  research_manager.md  research_manager.yaml  researcher.md  researcher.yaml  synthesizer.md  synthesizer.yaml  user_story.md  writer.md  writer.yaml
tests/: test_command_execution.py  test_file_operations.py  test_planning_organization.py  test_search_navigation.py  test_web_operations.py
tools/: __init__.py  command_execution.py  file_operations.py  planning_organization.py  search_navigation.py  web_operations.py
workflows/: LLM_CLIENTS.md  README.md  github_client.py  jira_integration.py  jira_workflow.py  openrouter_client.py
workflows/claude_code/: README.md  config.py  example.py  research_manager.py
workflows/code_review/: README.md  review_multi_llm.py  review_openrouter.py
workflows/jira_task/: README.md  README_separated_workflows.md  (+21 more)
(+50 files in other folders)
