[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-ops-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server for web operations"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.9.0",
    "requests>=2.31.0",
    "html2text>=2020.1.16"
]

[project.scripts]
web-ops-server = "server:main"

[tool.setuptools]
py-modules = ["server"]